crystal-facet-uml (1.26.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * xmi export exports sequence, timing, communication and interaction overview
  * system boundary renamed to subsystem (to match uml 2.5.1 spec)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 29 Oct 2020 20:30:00 +0100

crystal-facet-uml (1.25.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * cmake does not depend on c++ compiler anymore

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 29 Oct 2020 20:30:00 +0100

crystal-facet-uml (1.25.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * moving ports follow the cursor more accurate
  * Constraint Blocks show their ports completely inside
  * Artifacts and Components do not waste space for contained children
  * Comment titles do not overlap with the comment-corner
  * packages containing children display their title in the tab-symbol
  * layouting containments does not reserve columns/rows for the container
  * Feature/Composite Requirement does not exist anymore,
    data from older versions is auto-converted to Requirement
  * Requirements are displyed as box-with-label omitting the description
  * Interaction Overview Diagram is redesigned,
    data from older versions is auto-converted to Activity Diagram

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 18 Oct 2020 20:30:00 +0200

crystal-facet-uml (1.24.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * XMI(TM) export reflects containment-hierarcy of elements
  * XMI(TM) export automatically disambiguates between activity/state contexts
  * warnings are printed to xml export if model is not uml compliant
  * no arrow tip at communication path
  * export shows statistics on diagrams or classifiers
  * internal: messages to user user are typesafe for their parameters

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 08 Oct 2020 20:30:00 +0200

crystal-facet-uml (1.23.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]