@@ -1,1 +1,1 @@
-META_VERSION_STR="1.25.2"
+META_VERSION_STR="1.26.0"
